src/test/deca/etapeA/invalid/parser/parser_ident_0.deca
// Description:
//    test du parser pour les identificateurs
//    vérifie qu'aucun identificateur ne commence par un nombre
//
// Resultats:
// erreur syntaxique
// Ligne <10> : <syntaxError>

//Interdit de commencer un identificateur par un nombre
0toto
